--- a/api/hCommenter-Api.cabal
+++ b/api/hCommenter-Api.cabal
@@ -1,4 +1,4 @@
-cabal-version: 3.0
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.38.0.
 --
@@ -23,7 +23,6 @@ source-repository head
     location: https://github.com/cekkel/hCommenter
 
 library
-    visibility: public
     exposed-modules:
         Server
         Utils.Generators
@@ -52,12 +51,14 @@ library
         Middleware.Headers
         Middleware.Requests
         Middleware.ServantErrorFormatters
-        Server.Comment
-        Server.Health
-        Server.ServerTypes
-        Server.Swagger
-        Server.Voting
+        RestAPI.EffectInjection
+        RestAPI.Endpoints.Comment
+        RestAPI.Endpoints.Health
+        RestAPI.Endpoints.Swagger
+        RestAPI.Endpoints.Voting
+        RestAPI.ServerTypes
         Utils.Environment
+        Utils.Error
         Utils.RequestContext
     hs-source-dirs:
         src
