feat(api): create central entry point

--- a/api/hCommenter-Api.cabal
+++ b/api/hCommenter-Api.cabal
@@ -24,7 +24,9 @@ source-repository head
 
 library
     exposed-modules:
-        Server
+        EntryPoints
+        Frontend.Server
+        RestAPI.Server
         Utils.Generators
     other-modules:
         Database.Authors.Effect
