--- a/spa/package.json
+++ b/spa/package.json
@@ -14,7 +14,9 @@
     "@hey-api/client-fetch": "^0.10.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-aria-components": "^1.8.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss-react-aria-components": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
