--- a/spa/package.json
+++ b/spa/package.json
@@ -27,8 +27,10 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
+    "eslint-plugin-react-dom": "^1.48.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-x": "^1.48.4",
     "globals": "^15.15.0",
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
